--- a/Cibercomerciante/Compradores/templates/Perfil_compradores_usuarios.html
+++ b/Cibercomerciante/Compradores/templates/Perfil_compradores_usuarios.html
@@ -7,100 +7,133 @@
 {% block usuario %}
 
 <h1> Usuarios</h1>
-						<table class="table table-hover">
- 							<tr>
- 								<th>
- 									<div class="adduser">
- 										<a href="#"><i class="icon-user-plus" id="ic"></i></a>
- 									</div>
- 								</th>
- 								<th>
- 									<select name="type_user" id="select" class="controls">
-										<option value="administrador" selected>Administrador</option>
-										<option value="inventario" selected>Inventario</option>
-										<option value="pedidos" selected>Pedidos</option>
-										<option value="consulta" selected>Consulta</option>
-										<option value="todos" selected>Todos</option>
-									</select>
- 								</th>
- 								<th>
- 									<input  type="text" name='buscar' id="buscar" placeholder="buscar"></input>
- 									<i class="icon-search"></i>
- 								</th>
- 							</tr>
- 							<tr>
- 								<th>Nombre Usuario</th>
- 								<th>Tipo</th>
- 								<th>Acciones</th>
- 							</tr>
- 							<tr>
- 								<td>User 1</td>
- 								<td>Administrador</td>
- 								<td>
- 									<div>
- 										<a href="#"><i class="icon-user" id="ic"></i></a>
- 										<a href="#"><i class="icon-pencil" id="ic"></i></a>
- 										<a href="#"><i class="icon-cancel-circled" id="ic"></i></a>
- 									</div>
- 									
- 								</td>
- 								
- 							</tr>
+<table class="table table-hover">
+	<form action="/filtroCompradorUsuarios/" id="filtroUsuario" class="listar_ajax" method = "POST" >
+		{% csrf_token %}									
+		<tr>
+			<th>
+				<input  type="text" autocomplete="off" name='filtroNombre' id="buscarUsuarioComprador" placeholder="buscar"></inpu
+				<i class="icon-search"></i>
 
- 							<tr>
- 								<td>User 2</td>
- 								<td>Consulta</td>
- 								<td>
- 									<div>
- 										<a href="#"><i class="icon-user" id="ic"></i></a>
- 										<a href="#"><i class="icon-pencil" id="ic"></i></a>
- 										<a href="#"><i class="icon-cancel-circled" id="ic"></i></a>
- 									</div>
- 									
- 								</td>
- 								
- 							</tr>
- 							<tr>
- 								<td>User 3</td>
- 								<td>Administrador</td>
- 								<td>
- 									<div>
- 										<a href="#"><i class="icon-user" id="ic"></i></a>
- 										<a href="#"><i class="icon-pencil" id="ic"></i></a>
- 										<a href="#"><i class="icon-cancel-circled" id="ic"></i></a>
- 									</div>
- 									
- 								</td>
- 								
- 							</tr>
+			</th>
+			<th>
+				<select name="tipoUsuario" id="selectTipo" class="controls">
+					<option value="AC" >Administrador</option>
+					<option value="IC" >Inventario</option>
+					<option value="PC" >Pedidos</option>
+					<option value="RC" >Reporte</option>
+					<option value="null" selected>Todos</option>
+				</select>
+			</th>
+			<th>
+				<div class="adduser">
+					<a href="/agregar_usuarioc/" ><i class="icon-user-plus " id="ic"></i></a>
+				</div>
+			</th>
+		</tr>
+	</form>
 
- 							<tr>
- 								<td>User 4</td>
- 								<td>Pedidos</td>
- 								<td>
- 									<div>
- 										<a href="#"><i class="icon-user" id="ic"></i></a>
- 										<a href="#"><i class="icon-pencil" id="ic"></i></a>
- 										<a href="#"><i class="icon-cancel-circled" id="ic"></i></a>
- 									</div>
- 									
- 								</td>
- 							
- 							</tr>
+</table >
 
- 							<tr>
- 								<td>User 5</td>
- 								<td>Inventario</td>
- 								<td>
- 									<div>
- 										<a href="#"><i class="icon-user" id="ic"></i></a>
- 										<a href="#"><i class="icon-pencil" id="ic"></i></a>
- 										<a href="#"><i class="icon-cancel-circled" id="ic"></i></a>
- 									</div>
- 									
- 								</td>
- 	
- 							</tr>
 
-						</table>
+<div id="tablacontenido">
+	<table class="table table-hover table-bordered eliminar">
+
+		<tr>
+			<th>Nombre Usuario</th>
+			<th>Tipo</th>
+			<th style="width:100px;">Detalle</th>
+			<th style="width:100px;">Actualizar</th>
+			<th style="width:100px;">Eliminar</th>
+
+		</tr>
+		{% for i in products %}
+		<tr>
+			<td>{{i.user.first_name}}</td>
+			<td>{% for i in i.user.groups.all %}
+					{{i}},
+				{%  endfor %}
+			</td>
+			<td>
+				<a href="/visualizarUsuario/{{i.pk}}/"><i class="icon-user" id="ic"></i></a>
+			</td>
+			<td>
+				<a href="/modificarUsuarioCformulario/{{i.pk}}/"><i class="icon-pencil" id="ic"></i></a>
+			</td>
+			<td>
+				<a  data-toggle="modal" data-target="#myModal" pk="{{i.pk}}"                   nombre="{{i.user.first_name}}" apellido="{{i.user.last_name}}" email="{{i.user.email}}" usuario="{{ i.user.username }}" permisos=" " class="eliminar_usuarios" ><i class="icon-cancel-circled" ></i></a>
+			</td>
+
+		</tr>
+		{% endfor %}
+
+	</table>
+
+
+	<div class="pagination eliminar">
+		<span class="step-links">
+			{% if products.has_previous %}
+			<a href="?page={{ products.previous_page_number }}">Anterior</a>
+			{% endif %}
+
+			<span class="current">
+				Pagina {{ products.number }} de {{ products.paginator.num_pages }}.
+			</span>
+
+			{% if products.has_next %}
+			<a href="?page={{ products.next_page_number }}">Siguiente</a>
+			{% endif %}
+		</span>
+	</div>
+
+	<!-- Modal Eliminar -->
+
+</div>
+
+<!-- Modal Elimianr-->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="myModalLabel">Eliminar Usuario</h4>
+			</div>
+			<div class="modal-body">
+				<form class="form-horizontal" method="POST" action="/eliminarUsuarioC/">	
+					{% csrf_token %}
+					<div class="span4 well">
+						<input type="text" id="pk_eliminar" name="pk_eliminar" style="display:none;"></input> 
+						<p>
+							<strong>Nombre</strong>
+							<div id="nombre_eliminar"></div>
+						</p>
+						<p>
+							<strong>Apellido</strong>
+							<div id="apellido_eliminar"></div>
+						</p>
+						<p>
+							<strong>Usuario</strong>
+							<div id="username_eliminar"></div>
+						</p>
+						<p>
+							<strong>Email</strong>
+							<div id="email_eliminar"></div>
+						</p>
+						<p >
+							<strong>Permisos</strong>
+							<div id="permisos_eliminar"></div>
+						</p>
+					</div>
+
+			</div>
+			<div class="modal-footer">
+				<a  class="btn btn-default" data-dismiss="modal">Cancelar</a>
+				<button type="submit" class="btn btn-danger">Eliminar Usuario</button>
+				</form>
+
+			</div>
+		</div>
+	</div>
+</div>
+
 {% endblock%}
