--- a/Cibercomerciante/Gestion/templates/Registro.html
+++ b/Cibercomerciante/Gestion/templates/Registro.html
@@ -4,25 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Registro</title>
 	<link href="/static/css/bootstrap.css" media="all" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap-switch-master/static/stylesheets/bootstrap-switch.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/signup.css">
-	
-
-
 	<script type="text/javascript" src="/static/js/jquery-1.8.3.js"></script>
-	<script type="text/javascript" src="/static/bootstrap-switch-master/static/js/bootstrap-switch.js"></script>
-
-	<!-- // <script type="text/javascript" src="/static/js/jquery-1.6.4.min.js"></script> -->
-	<!-- // <script type="text/javascript" src="/static/js/jquery.js"></script> -->
-	<!-- // <script type="text/javascript" src="/static/js/jquery-1.10.2.js"></script> -->
-	<!-- // <script type="text/javascript" src="/static/js/jquery-ui.js"></script> -->
-
 	<script type="text/javascript" src="/static/js/funciones.js"></script>
 
-	<script type="text/javascript">
-	$('#label-switch').bootstrapSwitch('setOnClass', 'success');
-	$('#label-switch').bootstrapSwitch('setOffClass', 'danger');
-	</script>
 </head>
 <body>
 
@@ -33,24 +18,15 @@
 	<form class="form-horizontal" method="POST" action="/guardarUsuario/">
 		{%  csrf_token %}
 		<!-- Inicio tipo usuario-->
-		<div class="input-group input-group-lg pull-right login" id="usuario-radio">
-			<div id="label-switch" class="make-switch switch-large" data-on="warning" data-on-label="Vendedor" data-off-label="Comprador">
-				<input type="checkbox" name="tipo_usuario" checked>
-			</div>
-			<div class="input-group login3">
-				<span class="input-group-addon">
-					<input id="label-check" class="pull-left" type="checkbox" aria-label="...">
-				</span><p class="pull-left1"><strong>Ambos</strong></p>
-			</div>
-		</div>
+	
 
 		<div class="control-group">
 			<label class="control-label" for="nombres-input">Tipo Empresa</label>
 			<div class="controls">
 				<select name="tipo" id='tipo'>
-					<option value="Vendedor">v</option>
-					<option value="Comprador">c</option>
-					<option value="Ambos">a</option>
+					<option value="Vendedor">Vendedor</option>
+					<option value="Comprador">Comprador</option>
+					<option value="Ambos">Administrador</option>
 				</select>
 			</div>
 		</div>
@@ -84,7 +60,7 @@
 					{% for i in departamentos %}
 					<option value="{{i.pk}}">{{i}}</option>
 					{% endfor %}
-				</select>
+				</select> 
 			</div>
 		</div>
 
