--- a/Cibercomerciante/Vendedores/templates/BaseVendedores.html
+++ b/Cibercomerciante/Vendedores/templates/BaseVendedores.html
@@ -6,9 +6,59 @@
 		<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="/static/font-awesome/css/font-awesome.css">
 		<link type="text/css" rel="stylesheet" href="/static/iconset/css/fontello.css" />
-		<script type="text/javascript" src="/static/js/bootstrap.js"></script>
-		<script type="text/javascript" src="/static/js/funciones.js"></script>
+		<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js"></script>
 
+		<script type="text/javascript" src="/static/js/bootstrap.js"></script>
+
+
+		<script>
+		function getCookie(name) {
+			var cookieValue = null;
+			if (document.cookie && document.cookie != '') {
+				var cookies = document.cookie.split(';');
+				for (var i = 0; i < cookies.length; i++) {
+					var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) == (name + '=')) {
+            	cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            	break;
+            }
+        }
+    }
+    return cookieValue;
+}
+var csrftoken = getCookie('csrftoken');
+
+function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+function sameOrigin(url) {
+    // test that a given url is a same-origin URL
+    // url could be relative or scheme relative or absolute
+    var host = document.location.host; // host + port
+    var protocol = document.location.protocol;
+    var sr_origin = '//' + host;
+    var origin = protocol + sr_origin;
+    // Allow absolute or scheme relative URLs to same origin
+    return (url == origin || url.slice(0, origin.length + 1) == origin + '/') ||
+    (url == sr_origin || url.slice(0, sr_origin.length + 1) == sr_origin + '/') ||
+        // or any other URL that isn't scheme relative or absolute i.e relative.
+        !(/^(\/\/|http:|https:).*/.test(url));
+    }
+    $.ajaxSetup({
+    	beforeSend: function(xhr, settings) {
+    		if (!csrfSafeMethod(settings.type) && sameOrigin(settings.url)) {
+            // Send the token to same-origin, relative URLs only.
+            // Send the token only if the method warrants CSRF protection
+            // Using the CSRFToken value acquired earlier
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+    }
+});
+    </script>
+		<script type="text/javascript" src="/static/js/funciones.js"></script>
+    
 	</head>
 	<body>
 		<!--Encabezado de la pagina-->
@@ -52,6 +102,7 @@
 			  <div class="tab-content">
 			    
 			    <div {% block catalogoClase%}{%endblock%}  id="Catalogo">
+			    	
 					{% block catalogo %}{% endblock %}
 			    </div>
 			    <div {% block pedidoClase%}{%endblock%}  id="Pedidos">
